07-prometheus/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: prometheus
spec:
  rules:
  - host: grafana.phuthinhtravel.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana 
            port: 
              number: 80
